--- a/templates/to_do_list/to_do_list_form.html
+++ b/templates/to_do_list/to_do_list_form.html
@@ -2,7 +2,7 @@
 
 {% load crispy_forms_tags %}
 
-{% block title %} {{ titulo }} {{ object.nome_do_carro }} {% endblock %}
+{% block title %} Cadastro de Carros {% endblock %}
 
 {% block main %}
 
@@ -14,7 +14,7 @@
             <div class="col-lg-6">
                 <div class="card shadow-lg border-1 rounded-lg mt-3 mb-2">
                     <div class="card-header justify-content-center mycardheader">
-                        <h2 class="font-weight-dark my-8 text-center">{{ titulo }} {{ object.nome_do_carro }}</h2>
+                        <h2 class="font-weight-dark my-8 text-center">Cadastro de Carros</h2>
                     </div>
                     <div class="card-body mybody">
                     <form method="post">
