--- a/templates/to_do_list/to_do_list.html
+++ b/templates/to_do_list/to_do_list.html
@@ -2,13 +2,13 @@
 
 {% load crispy_forms_tags %}
 
-{% block title %} Lista de carros {% endblock %}
+{% block title %} Carford Car Shop {% endblock %}
 
 {% block main %}
 
 {% include 'mensagens.html' %}
 
-<center><h2>Lista de carros</h2></center><br>
+<center><h2>Carford Car Shop</h2></center><br>
 
 <center><table class="table-bordered my_table" id="alter">
     <thead class="mythead">
