--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="{% static 'mystyle.css' %}">
+    <link rel="stylesheet" type="text/css" media="screen" href="{% static 'style.css' %}">
+    <link rel="icon" href="{% static 'imagens/car-icon.png' %}">
 </head>
 <body>
     <div class="container">
