--- a/templates/proprietarios/proprietarios_list.html
+++ b/templates/proprietarios/proprietarios_list.html
@@ -2,20 +2,22 @@
 
 {% load crispy_forms_tags %}
 
-{% block title %} Lista de Proprietarios {% endblock %}
+{% block title %} Lista de Proprietários {% endblock %}
 
 {% block main %}
 
 {% include 'mensagens.html' %}
 
-<center><h2>Lista de Proprietarios</h2></center><br>
+{% include 'navbar.html' %}
+<br>
+<center><h2>Lista de Proprietários</h2></center><br>
 
 <center><table class="table-bordered my_table" id="alter">
     <thead class="mythead">
         <tr>
             <th>Proprietário</th>
             <th>Oportunidade de Venda</th>
-            <th>Tem carro?</th>
+            <th>Editar</th>
         </tr>
     </thead>
     <tbody class="mytbody">
@@ -23,22 +25,19 @@
             {% for dono in object_list %}
                 <td>{{ dono.nome }}</td>
                 {% if dono.possivel_venda is True %}
-                <td><img src="/static/confirm.png" width="40px" height="40px"></td>
+                    <td><img src="/static/imagens/confirm.png" width="40px" height="40px"></td>
                 {% else %}
-                <td><img src="/static/signal.png" width="30px" height="30px"></td>
+                    <td><img src="/static/imagens/signal.png" width="30px" height="30px"></td>
                 {% endif %}
 
-                {% if dono.id is True %}
-                <td>Sim</td>
-                {% else %}
-                <td>Não</td>
-                {% endif %}
-        </tr>{% endfor %}
+                <td><a href="{% url 'editar_proprietario' dono.pk %}" title="Editar" class="btn btn-warning btn-sm mybtn">
+                    <i class="fa fa-edit icon-eye" aria-hidden="true"></i></a></td>
+        </tr>
+        {% endfor %}
     </tbody>
 </table></center>
 <br>
-<center><a href="{% url 'novo_proprietario' %}" class="btn btn-primary mx-3">Cadastrar Proprietário</a>
-    <a href="{% url 'lista' %}" class="btn btn-success mx-3">Lista de Carros</a></center>
+<center><a href="{% url 'novo_proprietario' %}" class="btn btn-primary mybtn mx-2">Cadastrar Proprietário</a></center>
 <br>
 <center><table class="table-bordered table-sm">
     <thead class="mythead">
