--- a/templates/proprietarios/proprietarios_form.html
+++ b/templates/proprietarios/proprietarios_form.html
@@ -2,26 +2,28 @@
 
 {% load crispy_forms_tags %}
 
-{% block title %} Cadastrar Proprietário {% endblock %}
+{% block title %} {{ titulo }} {{ object.nome }}{% endblock %}
 
 {% block main %}
 
 {% include 'mensagens.html' %}
 
-<div class="form-content my-3">
+{% include 'navbar.html' %}
+
+<div class="form-content">
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-lg-6">
-                <div class="card shadow-lg border-1 rounded-lg mt-3 mb-2">
+            <div class="col-lg-5">
+                <div class="card shadow-lg border-1 rounded-lg mt-5">
                     <div class="card-header justify-content-center mycardheader">
-                        <h2 class="font-weight-dark my-8 text-center">Cadastrar Proprietário</h2>
+                        <h2 class="font-weight-dark my-8 text-center">{{ titulo }} {{ object.nome }}</h2>
                     </div>
                     <div class="card-body mybody">
                     <form method="post">
                         {% csrf_token %}
 
                         {{ form|crispy }}
-                        <button type="submit" class="btn btn-primary mybtn">Salvar</button>
+                        <button type="submit" class="btn btn-primary mybtn">{{ botao }}</button>
                         <a href="{% url 'proprietarios_list' %}" class="btn btn-success mybtn mymodalbutton2">Voltar</a>
                     </form>
                     </div>
